--- a/src/app/email-item/email-item.component.scss
+++ b/src/app/email-item/email-item.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     opacity: 0.7;
+    padding-bottom: 8px;
 }
 
 .emailText{
